update weiboshow & rfc1925

--- a/_posts/blog/2015-10-31-rfc1925.md
+++ b/_posts/blog/2015-10-31-rfc1925.md
@@ -1,12 +1,9 @@
 ---
 layout: post
 title: 网络十二条军规
-description: 在网络这个行当里打工了这么多年，居然不知道有 [RFC 1925-The Twelve Networking Truths
-](https://tools.ietf.org/html/rfc1925) 这个规约，十分汗颜，赶紧翻出来看看定定惊。
+description: 在网络这个行当里打工了这么多年，居然不知道有 RFC1925 这个规约，十分汗颜，赶紧翻出来看看定定惊。
 category: blog
 ---
-
-# 网络十二条军规
 
 ## 应该是有点无知
 
