--- a/_posts/blog/2015-10-31-rfc1925.md
+++ b/_posts/blog/2015-10-31-rfc1925.md
@@ -31,7 +31,7 @@ category: blog
 (7) 总是只能得到部分，而不全部。
   > (7a) (推论) 好、快、省：你只能最多得到两者而不可能同时得到三者。
 
-(8) 问题总是比较你想的要来得复杂。
+(8) 问题总是比你想的要来得复杂。
 
 (9) 不管是什么资源，你总是需要更多。
   > (9a) (推论) 网络中的所有问题，解决起来所需要花费的功夫总是超过预期。
